--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -31,3 +31,6 @@ roles:
   - name: lae.proxmox
     src: https://github.com/lae/ansible-role-proxmox
     version: develop
+
+  - name: andrewrothstein.tmux
+    version: v1.0.7
