--- a/ansible/host_vars/kilo.addeo.net.yml
+++ b/ansible/host_vars/kilo.addeo.net.yml
@@ -44,9 +44,11 @@ network_interfaces:
 kilo_firewall_allowed_udp_ports__to_merge:
   - 137 # SMB
   - 138 # SMB
+  - 2049 # NFS
 kilo_firewall_allowed_tcp_ports__to_merge:
   - 139 # SMB
   - 445 # SMB
+  - 2049 # NFS
   - 3260 # iSCSI
 
 # ZFS Configuration.
