Configure action_plugins location in ansible.cfg

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -8,3 +8,4 @@ stdout_calback=yaml
 bin_ansible_callbacks=true
 collections_path=./collections
 strategy_plugins=./plugins/mitogen/ansible_mitogen/plugins/strategy
+action_plugins=./action_plugins
