--- a/ansible/group_vars/servers.yml
+++ b/ansible/group_vars/servers.yml
@@ -41,6 +41,11 @@ install_plymouth: true
 plymouth_grub_gfxmode: 1024x768
 plymouth_theme: brogit-plymouth-theme
 
+harden_server: true
+manage_unattended_upgradse: true
+install_postfix: true
+manage_hostname: true
+
 # SSH Hardening Configuration.
 sftp_enabled: true
 
