--- a/ansible/host_vars/cantilever.addeo.net.yml
+++ b/ansible/host_vars/cantilever.addeo.net.yml
@@ -4,13 +4,25 @@ server_hostname: cantilever
 server_fqdn: cantilever.addeo.net
 
 # Bootstrap Configuration.
-bootstrap_iscsi_boot: true
-bootstrap_iscsi_interface_name: eno1
-bootstrap_iscsi_initiator: iqn.iscsi-init-test.addeo.net:test
-bootstrap_iscsi_initiator_ip: 172.1.0.10
-bootstrap_iscsi_target_name: iqn.iscsi-test.addeo.net:lun1
-bootstrap_iscsi_target_ip: 172.1.0.15
-bootstrap_zpool_encrypt_root: false
-bootstrap_zpool_type: single
+# bootstrap_iscsi_boot: true
+# bootstrap_iscsi_interface_name: eno1
+# bootstrap_iscsi_initiator: iqn.iscsi-init-test.addeo.net:test
+# bootstrap_iscsi_initiator_ip: 172.1.0.10
+# bootstrap_iscsi_target_name: iqn.iscsi-test.addeo.net:lun1
+# bootstrap_iscsi_target_ip: 172.1.0.15
+# bootstrap_zpool_encrypt_root: false
+# bootstrap_zpool_type: single
+# bootstrap_zpool_disk_identifiers:
+#   - /dev/disk/by-path/ip-172.1.0.15:3260-iscsi-iqn.iscsi-test.addeo.net:lun1-lun-1
+bootstrap_boot_type: uefi
 bootstrap_zpool_disk_identifiers:
-  - /dev/disk/by-path/ip-172.1.0.15:3260-iscsi-iqn.iscsi-test.addeo.net:lun1-lun-1
+  - /dev/disk/by-id/ata-ADATA_SP550_2F4920016280
+
+# ZFS Configuration.
+zfs_pools:
+  bpool:
+    scrub: false
+    state: scrub
+  rpool:
+    scrub: weekly
+    state: scrub
