--- a/ansible/host_vars/cantilever.addeo.net.yml
+++ b/ansible/host_vars/cantilever.addeo.net.yml
@@ -44,3 +44,18 @@ zfs_pools:
   rpool:
     scrub: weekly
     state: scrub
+  vmpool:
+    vdevs:
+      - type: mirror
+        devices:
+          - /dev/disk/by-id/ata-ADATA_SP550_2F4920016280
+          - /dev/disk/by-id/ata-ADATA_SP550_2F4920033841
+    scrub: weekly
+    properties:
+      ashift: 12
+    filesystem_properties:
+      compression: lz4
+      relatime: "on"
+      xattr: sa
+      utf8only: "on"
+    state: present
