Add backups dataset to kilo

--- a/ansible/host_vars/kilo.addeo.net.yml
+++ b/ansible/host_vars/kilo.addeo.net.yml
@@ -123,6 +123,10 @@ zfs_datasets:
       keyformat: passphrase
       keylocation: prompt
     state: present
+  spool/data/backups/proxmox:
+    properties:
+      sharenfs: "rw=172.16.1.66,anonuid=1001,anongid=1001,no_root_squash,all_squash"
+    state: present
   spool/data/downloads:
     state: present
   spool/data/downloads/complete:
