--- a/ansible/roles/network-interfaces/handlers/main.yml
+++ b/ansible/roles/network-interfaces/handlers/main.yml
@@ -1,10 +1,8 @@
 ---
 - name: restart networking
-  shell: "ip addr flush {{ interface_name }} && systemctl restart networking"
-  when: item.changed and (item.item.no_auto_down is not defined or item.item.no_auto_down is false)
-  with_items: "{{ network_interfaces_updates.results }}"
-  vars:
-    interface_name: "{{ item.item.name | default(item.item.key) }}"
+  shell: "ip addr flush {{ item.item.name }} && systemctl restart networking"
+  when: (item.changed or network_interfaces_single_file) and (item.item.no_auto_down is not defined or item.item.no_auto_down is false)
+  with_items: "{{ network_interfaces_updates.results | default(interfaces) }}"
   async: 120
   poll: 0
   register: net_restarting
