--- a/ansible/server.yml
+++ b/ansible/server.yml
@@ -85,7 +85,7 @@
       user:
         name: "{{ item.name }}"
         groups: "{{ item.groups | default(omit) }}"
-        password: "{{ (item.password is defined) | ternary(item.password | default(omit) | password_hash('sha512', 'salt'), '!') }}"
+        password: "{{ (item.password is defined) | ternary(item.password | default(omit) | password_hash('sha512', 65534 | random(seed=inventory_hostname) | string), '!') }}"
         shell: "{{ item.shell | default('/bin/bash') }}"
         password_lock: "{{ item.password_lock | default(false) }}"
         create_home: "{{ item.create_home | default(true) }}"
